<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presenter.auth.home.HomeAuthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageHomeAuth"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_image_home_auth"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/titleHomeAuthFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="#212121"
            android:fontFamily="@font/urbanist_700"
            android:textSize="48sp"
            android:text="@string/title_home_auth_fragment"
            app:layout_constraintTop_toBottomOf="@+id/imageHomeAuth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/bg_border"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleHomeAuthFragment"
            app:layout_constraintHorizontal_bias="0.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook"
                tools:ignore="ContentDescription" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textColor="#212121"
                android:fontFamily="@font/urbanist_600"
                android:textSize="16sp"
                android:text="@string/button_continue_with_facebook_home_auth_fragment" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/bg_border"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutFacebook"
            app:layout_constraintHorizontal_bias="0.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_google"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textColor="#212121"
                android:fontFamily="@font/urbanist_600"
                android:textSize="16sp"
                android:text="@string/button_continue_with_google_home_auth_fragment" />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayoutOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutGoogle"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EEEEEE"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/urbanist_600"
                android:textColor="#616161"
                android:text="@string/text_social_or_password_home_auth_fragment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EEEEEE"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/button_with_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_in_with_password_home_auth_fragment"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"
            style="@style/ThemeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutOr"
            app:layout_constraintHorizontal_bias="0.5"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_with_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_400"
                android:textColor="#9E9E9E"
                android:text="@string/text_dont_have_an_account_home_auth_fragment" />

            <TextView
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/urbanist_400"
                android:textColor="@color/color_default"
                android:text="@string/text_dont_have_an_account_home_auth_fragment" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>